test_suite/alan-2022-examples/failing/004460_mutation.alan
source x begin leave array end
